# Music-DSL

./: .gitignore  README.md  install.sh  pyproject.toml  setup.cfg  setup.py
music/: __init__.py  _chords.py  _constants.py  _durations.py  _engine.py  _instruments.py  _keys.py  _midi.py  _waveform.py  cli.py  models.py  parser.py
music/samples/: chaos.music  empire_fire.music  iron_clash.music  last_stand.music  machine.music  neon1.music  night_drive.music  skybound.music  tragedy.music
music_dsl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
