[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "music-dsl"
version = "1.0.0"
description = "Program your own music!"
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[project.scripts]
music = "music.cli:main"

[tool.setuptools.packages.find]
include = ["music*"]
