[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "music-dsl"
version = "2.0.3"
description = "Program your own music!"
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[project.scripts]
music = "music.cli:main"

[tool.setuptools.packages.find]
include = ["music*"]
